# HappyMeasure

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  Run_HappyMeasure.bat  Run_HappyMeasure.ps1  pyproject.toml
config/: presets.json  settings.json
docs/: AGENT_HANDOFF.md  ARCHITECTURE_CURRENT.md  BETA_ROADMAP.md  CHANGELOG.md  CODEX_DIARY_TEMP.md  DESIGN_DECISIONS.md  DOCS_AUDIT.md  DRIVER_SWEEP_EXTENSION_GUIDE.md  ERROR_RECOVERY.md  HARDWARE_DRIVER_MIGRATION.md  HARDWARE_DRY_RUN_GUIDE.md  HARDWARE_PREFLIGHT.md  HARDWARE_VALIDATION_PROTOCOL.md  MANUAL_SMOKE_TESTS.md  NAMING.md  NEW_THREAD_CONTEXT.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.7a1.md  RESTART_MECHANISM.md  SETTINGS_MIGRATION.md  STATE_MACHINE.md  TESTING_STRATEGY.md  TRACE_SCHEMA.md  TROUBLESHOOTING.md  UI_STYLE_GUIDE.md  UI_VISUAL_CHECKLIST.md  VERSIONING.md  WINDOWS_PORTABLE_BUILD.md  WINDOWS_PYTHON314_BUILD.md  safety.md
examples/: simple_cli_sweep.py
packaging/: HappyMeasure.spec  README_FIRST_PORTABLE.txt  happymeasure_entry.py  happymeasure_preflight_entry.py
tests/: README.md  run_full_validation.py  test_adaptive_log_settings.py  test_app_state.py  test_config_compatibility.py  test_core_coverage_gaps.py  test_data_import_export_store.py  test_docs_release_checklist.py  test_engineering_baseline.py  test_error_handling.py  test_export_log_ui.py  test_fault_injection_safety.py  test_handoff_trace_log_font.py  test_hardware_abstraction.py  test_hardware_preflight_cli.py  test_hardware_readiness.py  test_launcher_space_safe.py  test_legacy_ui_layout_contracts.py  (+32 more)
(+87 files in other folders)
